--- a/_includes/author_link.html
+++ b/_includes/author_link.html
@@ -1,54 +1,8 @@
-{%- comment %}
-If the include is broken across multiple lines, sometimes the name has \n
-characters in it and we need to remove them. Liquid doesn't understand \n,
-so we capture an actual newline and replace it.
-{% endcomment -%}
-{%- capture newline %}
-{% endcapture -%}
-
-{%- assign possessive = include.possessive | default: false -%}
-
-{%- comment %}
-Try to find the URL using the name and known layout.
-{% endcomment -%}
-{%- capture url -%}
-  {% include get_url_from_title.html title=include.name layout="author_page" %}
-{%- endcapture -%}
-
-{%- comment %}
-Resolve the text to display in the link.
-Prefer `link_text`, fallback to the raw name.
-{% endcomment -%}
-{%- assign raw_text = include.link_text | default: include.name -%}
-{%- assign link_text = raw_text | replace: newline, " " | strip -%}
-
-{%- comment %}
-If no custom text was passed, try to use the title from the page.
-{% endcomment -%}
-{%- if include.link_text == null and url != "" -%}
-  {%- capture link_text -%}
-    {% include get_title_from_url.html url=url %}
-  {%- endcapture -%}
-{%- endif -%}
-
-{%- comment %}
-Wrap the text in a span and add `'s` if needed.
-{% endcomment -%}
-{%- capture wrapped -%}
-  <span class="author-name">{{- link_text -}}</span>
-{%- endcapture -%}
-
-{%- if possessive -%}
-  {%- capture wrapped -%}{{ wrapped }}'s{%- endcapture -%}
-{%- endif -%}
-
-{%- comment %}
-Only add a link if the resolved URL isn't the current page.
-{% endcomment -%}
-{%- if url != "" and page.url != url -%}
-  {%- capture wrapped -%}
-    <a href="{{ url }}">{{- wrapped -}}</a>
-  {%- endcapture -%}
-{%- endif -%}
-
-{{- wrapped -}}
+{%- include link_from_title.html
+  title=include.name
+  layout="author_page"
+  wrapper="span"
+  class="author-name"
+  link_text=include.link_text
+  possessive=include.possessive
+-%}
