--- a/_includes/book_rating.html
+++ b/_includes/book_rating.html
@@ -1,26 +1,18 @@
 {%- assign star = '<span class="book_star full_star">★</span>' -%}
 {%- assign empty_star = '<span class="book_star empty_star">☆</span>' -%}
 
-{%- comment -%}Convert to int if it's a string by adding 0.{%- endcomment -%}
-{%- assign rating = include.rating | plus: 0 -%}
+{%- assign rating = include.rating | plus: 0 -%} {%- comment -%} Convert to int if it's a string {%- endcomment -%}
 
-{%- capture rating_block -%}
-  {%- if rating == 1 -%}
-    {{star}}{{empty_star}}{{empty_star}}{{empty_star}}{{empty_star}}
-  {%- elsif rating == 2 -%}
-    {{star}}{{star}}{{empty_star}}{{empty_star}}{{empty_star}}
-  {%- elsif rating == 3 -%}
-    {{star}}{{star}}{{star}}{{empty_star}}{{empty_star}}
-  {%- elsif rating == 4 -%}
-    {{star}}{{star}}{{star}}{{star}}{{empty_star}}
-  {%- elsif rating == 5 -%}
-    {{star}}{{star}}{{star}}{{star}}{{star}}
-  {% else %}
-    {%- comment -%}Throw error if we have a bad rating value.{%- endcomment -%}
-    {% link throw_value_error %}
-  {%- endif -%}
-{% endcapture %}
-
-{%- if rating_block != '' -%}
-    <div class="book-rating star-rating-{{ rating }}">{{ rating_block }}</div>
+{%- if rating < 1 or rating > 5 -%}
+  {% link throw_value_error %}
+{%- else -%}
+  <div class="book-rating star-rating-{{ rating }}">
+    {%- for i in (1..5) -%}
+      {%- if i <= rating -%}
+        {{ star }}
+      {%- else -%}
+        {{ empty_star }}
+      {%- endif -%}
+    {%- endfor -%}
+  </div>
 {%- endif -%}
