--- a/_layouts/author_page.html
+++ b/_layouts/author_page.html
@@ -2,85 +2,27 @@
 layout: default
 ---
 <div class="author-page">
-  <h1 class="author-title"><span class="author-name">{{ page.title }}</span></h1>
+  <h1 class="author-title">
+    <span class="author-name">{{ page.title }}</span>
+  </h1>
 
   {{ content }}
 
   Below you'll find short reviews of <span class="author-name">{{ page.title
     }}</span>'s books:
 
-{% comment %}This sorted list is used to put the books in series order in each
-<h2> heading.{% endcomment %}
-{% assign sorted_books = site.books | sort: "book_number" %}
-{% assign sorted_books_by_title = site.books | sort: "title" %}
+  {% assign sorted_books = site.books | sort: "book_number" %}
+  {% assign sorted_books_by_title = site.books | sort: "title" %}
 
-{% comment %}This sorted list is used to put the <h2> sections in the right
-order.{% endcomment %}
-{% assign sorted_series = "" %}
-
-{% for book in site.books %}
-  {% comment %}Keep only the correct author.{% endcomment %}
-  {% if book.book_author == page.title %}
-    {% assign sorted_series = sorted_series | append: book.series | append: "|" %}
-  {% endif %}
-{% endfor %}
-
-{% assign sorted_series = sorted_series | split: "|" | uniq | sort %}
-
-{% comment %}If the author has books without series, place those first. We
-have to test if they exist though first to make our header logic easier.{% endcomment %}
-{% assign placed_no_series_header = false %}
-{% for book in sorted_books_by_title %}
-  {% if book.book_author == page.title %}
-    {% if book.series == empty or book.series == null %}
-      {% if placed_no_series_header == false %}
-        {% assign placed_no_series_header = true %}
-
-<h2 class="book-list-headline">Standalone Books</h2>
-<div class="card-grid">
-
-      {% endif %}
-
-      {% include auto_book_card_from_object.html book=book %}
-
-    {% endif %}
-  {% endif %}
-{% endfor %}
-
-{% comment %}Close the card-grid{% endcomment %}
-{% if placed_no_series_header == true %}
-  </div>
-{% endif %}
-
-{% comment %} We have to place a <div></div> pair between all the <h2>
-headlines, but not before the first headline.{% endcomment %}
-{% assign first_place = true %}
-
-{% for sort_series in sorted_series %}
-  {% if sort_series == null or sort_series == empty %}
-    {% continue %}
-  {% endif %}
-
-  {% comment %}Close the card-grid{% endcomment %}
-  {% if first_place == false %}
-</div>
-  {% endif %}
-  {% assign first_place = false %}
-
-<h2 class="book-list-headline">{{ sort_series }}</h2>
-<div class="card-grid">
-
-  {% for book in sorted_books %}
-    {% assign series = book.series %}
-    {% if sort_series == series %}
-
-      {% include auto_book_card_from_object.html book=book %}
-
+  {% comment %} Generate series list for this author {% endcomment %}
+  {% assign sorted_series = "" %}
+  {% for book in site.books %}
+    {% if book.book_author == page.title %}
+      {% assign sorted_series = sorted_series | append: book.series | append: "|" %}
     {% endif %}
   {% endfor %}
-{% endfor %}
-{% comment %}Close the final card-grid{% endcomment %}
-</div>
+  {% assign sorted_series = sorted_series | split: "|" | uniq | sort %}
 
-{% comment %}Close the author-page.{% endcomment %}
+  {% include standalone_books.html books=sorted_books_by_title author=page.title %}
+  {% include series_sections.html sorted_series=sorted_series books=sorted_books author=page.title %}
 </div>
