--- a/_layouts/series_page.html
+++ b/_layouts/series_page.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="series-page">
   <h1 class="series-title">
     <span class="book-series">{{ page.title }}</span>
@@ -8,8 +9,8 @@ layout: default
 
   {{ content }}
 
-  Below you'll find short reviews of the books from {% include
-  get_series_text.html series=page.title %}:
+  Below you'll find short reviews of the books from series: {{ page.title }}
 
-  {% include series_books.html series=page.title %}
+  {% assign sorted_books = site.books | sort: "book_number" %}
+  {% include book_listing.html books=sorted_books series=page.title %}
 </div>
