Rename book_listing.html -> list_books_by_series.html

--- a/_includes/list_books_by_series.html
+++ b/_includes/list_books_by_series.html
@@ -1,5 +1,5 @@
 {% comment %}
-  book_listing.html
+  list_books_by_series.html
   Parameters:
     - author (optional): filter books for a specific author.
     - series (optional): if provided, display only books from this series.
