--- a/_layouts/author_page.html
+++ b/_layouts/author_page.html
@@ -12,5 +12,5 @@ layout: default
   Below you'll find short reviews of <span class="author-name">{{ page.title
     }}</span>'s books:
 
-  {% include book_listing.html author=page.title %}
+  {% include list_books_by_series.html author=page.title %}
 </div>
