--- a/_layouts/series_page.html
+++ b/_layouts/series_page.html
@@ -11,5 +11,5 @@ layout: default
 
   Below you'll find short reviews of the books from the series: {{ page.title }}
 
-  {% include book_listing.html series=page.title %}
+  {% include list_books_by_series.html series=page.title %}
 </div>
